# multi-agent-orchestrator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ma-ship.yml
ma/: __init__.py  approve.py  cli.py  defaults.py  events.py  gates.py  locks.py  notify.py  ops.py  orchestrator.py  queue.py  report.py  router.py  secrets.py  store.py  tasks.py  usage.py  workspace.py
tests/: test_orchestrator.py
